# biblioteca-br

./: .gitignore  ESCOPO.md  LICENSE  README.md  bacen.py  main.py  pyproject.toml  test_export.py  test_plot.py  teste_rapido.xlsx
biblioteca_br/: __init__.py  bacen.py
src/biblioteca_br/: __init__.py  analise.py  b3.py  bacen.py  export.py  ibge.py  plot.py
src/biblioteca_br.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testes_exportacao/: amostra.csv  amostra.json  amostra.xlsx  dados_economicos.csv  dados_economicos.json  dados_economicos.xlsx
tests/: test_export.py  test_plot.py
