[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblioteca-br"
version = "0.1.0"
description = "Biblioteca Python para dados econômicos e financeiros brasileiros"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "openpyxl>=3.0",
    "reportlab>=3.6",
    "yfinance>=0.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]